# __Statify__Discord-bot

./: Cargo.toml  Dockerfile  README.md  keep_alive.py  main.py
src/: main.rs
