[package]
name = "statify_discord_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.7", features = ["client", "gateway", "rustls_backend", "model", "cache"], default-features = false }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"